wip - building base streaming ui classes

--- a/engine/src/main/resources/org/pentaho/di/trans/step/messages/messages_en_US.properties
+++ b/engine/src/main/resources/org/pentaho/di/trans/step/messages/messages_en_US.properties
@@ -514,3 +514,4 @@ BaseStep.Log.SelectedRemoteOutputStepToServer = Selected remote output step [{0}
 
 BaseStep.RowHandler.GetRowFromNotSupported = Getting row from a specified step is not supported in this implementation:  {0}
 BaseStep.RowHandler.PutRowToNotSupported = Putting a row to specified step is not supported in this implementation:  {0}
+BaseStreamingStepMeta.ReferencedObject.SubTrans.Description=Transformation
